Add SlashCommand class that adds SlashCommands to Discord (Not registered with Bukkit)